--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -5,12 +5,6 @@ body {
 	font-family: var(--ff-primary);
 }
 
-footer {
-	margin-top: rem(60);
-	text-align: center;
-	padding-bottom: rem(40);
-}
-
 .cards-bg-container {
 	background: url("/images/bg-main-mobile.png") no-repeat;
 	background-size: cover;
