--- a/scss/layout/_media-queries.scss
+++ b/scss/layout/_media-queries.scss
@@ -12,16 +12,15 @@
 }
 
 @media (min-width: 90rem) {
-	body {
-		position: relative;
-	}
-
 	main {
 		display: grid;
 		grid-template-columns: 483px auto;
+		column-gap: 100px;
 	}
 
 	.cards-bg-container {
+		display: grid;
+		align-items: center;
 		background: url("/images/bg-main-desktop.png") no-repeat;
 		background-size: cover;
 		min-height: 100vh;
@@ -31,19 +30,24 @@
 		margin: 0;
 		width: 100%;
 		max-width: none;
+		height: auto;
 	}
 
 	.card {
 		width: 447px;
 
 		&--front {
-			top: 186px;
-			left: 164px;
+			position: relative;
+			top: unset;
+			left: unset;
+			transform: translateX(164px);
 		}
 
 		&--back {
-			top: 470px;
-			left: 258px;
+			position: relative;
+			top: unset;
+			left: unset;
+			transform: translate(258px, 36px);
 		}
 
 		&__number {
@@ -59,16 +63,13 @@
 
 	.form,
 	.success {
-		margin-top: rem(275);
+		align-self: center;
 		justify-self: center;
 		grid-column: 2 / 3;
 		grid-row: 1 / 2;
 	}
 
-	footer {
-		padding-bottom: rem(30);
-		grid-column: 2 / 3;
-		grid-row: 1 / 2;
-		align-self: end;
+	.form__group:not(:last-of-type) {
+		margin-bottom: rem(26);
 	}
 }
